<resources>
    <string name="app_name">Aplicativo SUS</string>

    <!-- Botões -->
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="agendar">Agendar</string>
    <string name="voltar_inicio">Voltar ao início</string>
    <string name="confirmar">Confirmar</string>
    
    <!-- Cadastro / Login -->
    <string name="nome">Nome</string>
    <string name="numero_cartao_sus">Número do cartão SUS</string>
    <string name="endereco">Endereço</string>
    <string name="cpf">cpf</string>
    <string name="senha">Senha</string>
    <string name="confirmacao_senha">Confirmar Senha</string>
    <string name="esqueceu_senha">Esqueci minha senha</string>
    <string name="phone">Telefone</string>
    <string name="email">Email</string>

    <!-- Titulos de tela -->
    <string name="entrar_title">Entrar</string>
    <string name="cadastro_title">Preencha seus dados</string>
    <string name="editar_dados_title">Edite seus dados</string>

    <string name="consulta_title">Suas Consultas</string>
    <string name="especialidade_title">Selecione a especialidade</string>
    <string name="posto_saude_title">Selecione o posto de saúde</string>
    <string name="data_title">Selecione a data</string>
    <string name="horario_title">Selecione o horário</string>
    <string name="confirmacao_title">Confirmação</string>

    <!-- Mensagens -->
    <string name="consulta_agendada_sucesso">Consulta agendada com sucesso!</string>
    <string name="consulta_cancelada_sucesso">Consulta cancelada com sucesso!</string>
    
    <string name="consulta_cancelada_erro">Erro ao cancelar consulta!</string>
    <string name="consulta_agendada_erro">Erro ao agendar consulta!</string>

    <string name="consulta_reagendada_sucesso">Consulta reagendada com sucesso!</string>
    <string name="consulta_reagendada_erro">Erro ao reagendar consulta!</string>

    <!-- Consulta -->
    <string name="ola">"Olá, "</string>

    <!-- Posto Saude -->
    <string name="disponiveis">Disponíveis</string>
    <string name="vagas">Vagas</string>

    <!-- Confirmacao -->
    <string name="especialidade">Especialidade</string>
    <string name="medico">Médico</string>
    <string name="posto_saude">Posto de Saúde</string>
    <string name="data">Data e hora</string>
    <string name="selecionar_data">Selecionar data</string>
    <string name="continuar">Continuar</string>
    <string name="informacoes_pessoais">Informações pessoais</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="dados_alteraveis">Dados alteráveis</string>
    <string name="cancelar">Cancelar</string>
    <string name="agendamento">Agendamento</string>
    <string name="cadastro">Cadastro</string>

    <!-- Validacao -->
    <string name="nome_validacao">O nome deve ter entre 6 e 100 caracteres</string>
    <string name="phone_validacao">O telefone deve ter entre 10 e 13 caracteres</string>
    <string name="senha_validacao">Senha inválida</string>
    <string name="cpf_validacao">CPF inválido</string>
    <string name="sus_validacao">Cartão SUS inválido</string>
    <string name="email_validacao">Email inválido</string>

</resources>