<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF1F9">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/TextViewTitleStyle"
        android:layout_width="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/confirmacao_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <TextView
            style="@style/TextViewHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/especialidade" />

        <TextView
            android:id="@+id/textViewEspecialidade"
            style="@style/TextViewLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Odontologia" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="70dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medico"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textViewMedico"
                style="@style/TextViewLargeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dr. Fulano"
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textViewDataHora"
                style="@style/TextViewLargeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="24/12/2024 às 14:00"
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewHeaderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posto_saude"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textViewPostoSaude"
                style="@style/TextViewLargeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mais Saúde para você"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textViewEndereco"
                style="@style/BaseTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Av. Jesus do céu, 123"
                android:textAlignment="textStart" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonConfirm"
        style="@style/ButtonStyle"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="64dp"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>